--- a/src/K99XBuyer/DashboardDealer/DashboardDealer.css
+++ b/src/K99XBuyer/DashboardDealer/DashboardDealer.css
@@ -3,26 +3,24 @@
     font-weight: 900;
 }
 
-.pop-up
-{
-    position: fixed;
-    top: 5%;
-    left: 25%;
-    width: 100%;
-    height: 100%;
+.pop-up {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* semi-transparent background */
+  z-index: 1050; /* make sure it's above other content */
+  display: flex;
+  justify-content: center;
+  align-items: start; /* align at top */
+  padding-top: 40px;
 }
 
-.pop-up-card
-{
-    max-width: 320px;
-    width: 500px;
-}
-
-@media (max-width: 576px) 
-{
-    .pop-up
-    {
-        top: 5%;
-        left: 3%;
-    }
+.pop-up-card {
+  background: white;
+  max-width: 600px;
+  width: 90%;
+  border-radius: 8px;
+  overflow: hidden;
 }
