--- a/src/K99XBuyer/LoginPage/SignIn/SignInDealer.css
+++ b/src/K99XBuyer/LoginPage/SignIn/SignInDealer.css
@@ -1,27 +1,16 @@
-/* Sign In tabs  */
+/* ===== Registered Dealers ====== */
 
-.activeTab-btn
+/* .normalTab-signIn
 {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    transition: all 0.3s ease;
-}
-
-.normalTab-btn
-{
-    border: 1px solid  var(--secondary-color);
-    color: var(--secondary-color);
-    background-color: white;
-    transition: all 0.3s ease;
-}
+    border: 2px solid var(--blue-200);
+} */
 
 .activeTab-btn:hover,.normalTab-btn:hover 
 {
   transform: none !important;
 }
 
-.normalTab-btn:hover 
+.normalTab-signIn:hover 
 {
-  background-color: #eff3ff;
+  color: black;
 }
