--- a/src/Home/HeroSection/HeroSection.css
+++ b/src/Home/HeroSection/HeroSection.css
@@ -23,3 +23,15 @@
     text-decoration: none;
     font-weight: 900;
 }
+
+@media (max-width: 992px)
+{
+  .offerform-card
+  {
+    max-width: 500px;
+  }
+  .offer-btn-size
+  {
+    max-width: 500px;
+  }
+}
