--- a/src/K99XBuyer/DashboardDealer/DashboardDealer.css
+++ b/src/K99XBuyer/DashboardDealer/DashboardDealer.css
@@ -21,17 +21,26 @@
   background: white;
   max-width: 600px;
   width: 90%;
-  border-radius: 8px;
+  border-radius: 15px;
   overflow: hidden;
 }
 
 /* StatsCard.css */
-.secondary-outline-btn
+.skyBlue-outline-btn
 {
-  background-color: var(--card-bg-secondary);
+  background-color: white;
   text-decoration: none;
   padding: 5px 0;
-  border-radius: 50rem;
-  border: 1px solid var(--secondary-color);
-  color: var(--secondary-color);
+  border-radius: 10px;
+  border: 2px solid #b6e8ff;
+  color: var(--sky-blue-600);
+}
+
+.skyBlue-outline-btn:hover
+{
+  background-color:var(--sky-blue-600);
+  text-decoration: none;
+  padding: 5px 0;
+  border: none;
+  color: white;
 }
