--- a/src/Home/HeroSection/HeroSection.css
+++ b/src/Home/HeroSection/HeroSection.css
@@ -1,3 +1,16 @@
+.hero-section
+{
+  margin-top: 100px;
+}
+
+@media (max-width: 576px)
+{
+  .hero-section
+  {
+    margin-top: 80px !important;
+  }
+}
+
 .hero-title
 {
   font-size: clamp(50px, 5vw, 90px);
@@ -5,7 +18,6 @@
   color: var(--blue-color);
   text-transform: uppercase;
   line-height: 1;
-  font-family: "Inter", sans-serif;
   white-space: normal;
 }
 
